app/assets/stylesheets/frontpage.scss
// Place all the styles related to the frontpage controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

html, body {
  height: 100%;
  background: #fff;
  color: #666;
  line-height: 1.3;
}

#frontpage {
  .lead {
    font-family: 'Raleway', sans-serif;
    font-weight: 300;
    font-size: 25px;

  }

  /* Layout */
  section {
    width: 100%;
    /*min-height: 100%;*/
    position: relative;
  	padding-bottom: 6em;
  }
  .frontpage-image-background {
    min-height: 256px;
    background-attachment: fixed;
    background-position: top center;
    background-repeat: no-repeat;
  }
  #lofoten {
    display: flex;
    justify-content: center;
    height: 70%;
    background-image: linear-gradient(rgba(0, 0, 0, 0.01), rgba(0, 0, 0, 0.6)), url('/assets/lofoten.jpg');
  }
  .intro-elements {
    align-self: center;
    text-align: center;
    img {
      margin-bottom: 1em;
      display: block;
    }
  }
  #berlin {
    background-image: linear-gradient(rgba(0, 0, 0, 0.01), rgba(0, 0, 0, 0.6)), url('/assets/berlin.jpg');
  }
  #mallorca {
    background-image: linear-gradient(rgba(0, 0, 0, 0.01), rgba(0, 0, 0, 0.6)), url('/assets/mallorca.jpg');
  }
  .intro .wrapper {
    text-align: center;
  }
  section {
    padding: 2em 10%;
  }

  .content h1 {
    font-family: 'Raleway', sans-serif;
    font-weight: 100;
    font-size: 55px;
    margin: 0 0 20px 0;
    padding: 0;
    line-height: 1;
  }

  .content h3 {
    font-family: 'Raleway', sans-serif;
    font-weight: 500;
    font-size: 25px;
    margin: 0;
    padding: 0;
  }

  .logo-divider::before {
    top: -40px;
    background: #ceefeb;
    box-shadow: -40px 40px 0 #85d6cb, 40px -40px 0 #85d6cb;
  }

  .logo-divider::before {
    left: 50%;
    width: 80px;
    height: 80px;
    -webkit-transform: translateX(-50%) rotate(45deg);
    transform: translateX(-50%) rotate(45deg);
  }

  @media (min-width: 760px) {
    dt {
      text-align: right;
      padding-right: 15px;
      float: left;
      width: 165px;
      font-weight: bold;
    }

    dd {
      margin-left: 165px;
      margin-bottom: 10px;
    }


    .intro .content h1 {
      margin: 0;
    }
    .location .content {
      width: 350px;
      height: 200px;
      padding: 20px;
      top: 10px;
      left: 10px;
      position: absolute;
      text-align: left;
      background: white;
    }

    .location iframe {
      margin-top: 0;
    }

    .two, .schedule, .talks {
      padding: 100px 0;
    }

    .two .center {
      min-width: 400px;
      margin: auto;
      margin-top: -25px;
    }

    .content h1 {
      line-height: 1.3;
    }

    .two .content, .schedule .content, .talks .content {
      margin: 0 auto;
      width: 700px;
    }

    .schedule .content {
        overflow: hidden;
    }

    .schedule.progComView .content {
      width: 90%;
    }

    .schedule-entry {
      float: left;
    }
    .with-4-entries .schedule-entry {
      width: 23.5%;
      margin-right: 2%;
    }

    .with-3-entries .schedule-entry {
      width: 32%;
      margin-right: 2%;
    }

    .with-2-entries .schedule-entry {
      width: 49%;
      margin-right: 2%;
    }
    .with-1-entries .schedule-entry {
      width: 100%;
      margin-right: 0;
    }

    .schedule-entry:last-child {
      margin-right: 0;
    }

    .speaker {
      margin-bottom: 20px;
      overflow: auto;
    }

    .speaker .bio-pic {
      float: left;
    }

    .speaker .bio {
      margin-left: 170px;
    }
  }

  .speaker .bio-pic {
    border-radius: 50%;
    width: 150px;
    background-color: #efefef;
  }
}

